# nexon_ws

./: .gitignore  Data_Latensi.csv  brail_map.pgm  brail_map.yaml  brail_serial.data  datavisual.sh  lt2_lorong.pgm  lt2_lorong.yaml  lt2_lorong_serial.data  lt_brail_map.pgm  lt_brail_map.yaml  lt_brail_serial.data  navigation.sh  nexon_launch.sh  slam_launch.sh  testing_GU2_map.pgm  testing_GU2_map.yaml  testing_brail.pgm  testing_brail.yaml  testing_brail_serial.data
install/: local_setup.sh  setup.sh
install/data_visual/lib/data_visual/: data_visual_node
install/data_visual/share/data_visual/: package.bash  (+4 more)
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.2
log/: latest_build
src/gamepad_bt_pkg/: setup.cfg  setup.py
src/gamepad_pkg/: package.xml  setup.cfg  setup.py
src/gamepad_pkg/gamepad_pkg/: gamepad_yudhis.py
src/imu_kalman_pkg/: setup.cfg  setup.py
src/nav2_dstar_lite/: CMakeLists.txt
src/nav2_dstar_lite/src/: dstar_lite_core.cpp  dstar_lite_planner.cpp
src/nexon/: README.md  ROBOT_INSTALLATION.md  install_linorobot2.bash
src/nexon/data_visual/: package.xml  setup.cfg  setup.py
src/nexon/docker/: .env  Dockerfile  docker-compose.yaml  entrypoint.sh  install_sensors.bash  sim.yaml
src/nexon/lock_system/: setup.cfg  setup.py
src/nexon/nexon/: CMakeLists.txt  package.xml
src/nexon/nexon_base/: CMakeLists.txt
src/nexon/nexon_bringup/: CMakeLists.txt  package.xml
src/nexon/nexon_description/: CMakeLists.txt  package.xml
src/nexon/nexon_gazebo/: CMakeLists.txt  package.xml
src/nexon/nexon_navigation/: CMakeLists.txt
(+254 files in other folders)
